[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hollyboyproject" # Замените на имя вашего проекта
version = "0.1.0"       # Замените на версию вашего проекта
description = "A short description of your project"
dependencies = [

]

[project.authors]
[[project.authors]]
name = "Holly boy" 
email = "hollyboy2000@mail.ru" # Замените на ваш email


[project.urls]
Homepage = "https://github.com/hollyman2/json-parser" # Замените на URL вашего репозитория
